[package]
name = "crazytrip-business-review-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-rt = "2.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime & utils
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
dotenvy = "0.15"
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }
glob = "0.3"
deadpool-postgres = "0.14"

# UUIDs & Time
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Validation, logging and errors
validator = { version = "0.19", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"

# HTTP clients and other utilities
reqwest = { version = "0.12", features = ["json"] }

